--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The back end logic for workspace",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"DBusername=admin DBpassword=8ce70ac8ece252cc48a2fb875fd69f589c0ba0e53cc62c76241e81529dfb2b1f nodemon"
   },
   "author": "JohnCdf",
   "license": "ISC",
