--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "The back end logic for workspace",
   "main": "index.js",
-  "scripts": {
-    "start":"DBusername=admin DBpassword=8ce70ac8ece252cc48a2fb875fd69f589c0ba0e53cc62c76241e81529dfb2b1f nodemon"
+  "scripts": { 
+   "start": "DBusername=admin DBpassword=8ce70ac8ece252cc48a2fb875fd69f589c0ba0e53cc62c76241e81529dfb2b1f nodemon"
   },
   "author": "JohnCdf",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4",
-    "pbkdf2": "^3.0.16"
+    "mongoose": "^5.1.2"
   }
 }
