--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,10 @@
-image: node:6.9.4
-
+image: node:6
+clone:
+  depth: full
 pipelines:
   default:
     - step:
-        caches:
-          - node
-        script: 
+        script:
           - npm install
-          - npm start
+          - npm test
+          - git push https://heroku:d643d490-1861-4ee9-95eb-6027871514fd@git.heroku.com/workspace-api.git HEAD
