--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "work-space-backend",
   "version": "1.0.0",
-  "description": "The back end logic for workspace",
+  "description": "The back end api for workspace",
   "main": "index.js",
-  "scripts": { 
-   "start": "DBusername=admin DBpassword=8ce70ac8ece252cc48a2fb875fd69f589c0ba0e53cc62c76241e81529dfb2b1f nodemon"
+  "scripts": {
+    "start": "DBusername=admin DBpassword=8ce70ac8ece252cc48a2fb875fd69f589c0ba0e53cc62c76241e81529dfb2b1f node index"
   },
   "author": "JohnCdf",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4",
-    "mongoose": "^5.1.2"
+    "mongoose": "^5.1.2",
+    "morgan": "^1.9.0"
   }
 }
