--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The back end api for workspace",
   "main": "index.js",
   "scripts": {
-    "start": "DBusername=admin DBpassword=8ce70ac8ece252cc48a2fb875fd69f589c0ba0e53cc62c76241e81529dfb2b1f node index"
+    "start": "node index"
   },
   "author": "JohnCdf",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0"
