--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-formidable": "^1.0.0",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0"
   }
 }
