--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-formidable": "^1.0.0",
@@ -18,6 +19,8 @@
     "mongodb": "^3.1.0",
     "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "nodemailer": "^4.6.7",
+    "nodemailer-smtp-transport": "^2.7.4"
   }
 }
