--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The back end api for workspace",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "test": "mocha test/* --timeout 10000"
   },
   "author": "JohnCdf",
   "license": "ISC",
