--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -23,6 +25,7 @@
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
     "nodemailer-smtp-transport": "^2.7.4",
+    "querystring": "^0.2.0",
     "sanitizer": "^0.1.3"
   }
 }
