--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "querystring": "^0.2.0",
     "sanitizer": "^0.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
